objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Call_Owner_Is_Logged_In__c</fullName>
        <formula>IF(Call_Owner__c =  $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Owner Is Logged In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is who owns the the call</inlineHelpText>
        <label>Call Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Notes__c</fullName>
        <label>Campaign Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Task__c</fullName>
        <formula>HYPERLINK( Id +&quot;/e?saveURL=&quot; + &quot;%2F00Oj0000000atP4&quot; + &quot;&amp;retURL=&quot; + &quot;%2F00Oj0000000atP4&quot; , &quot;Update Task&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Marketing Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Disposition__c</fullName>
        <inlineHelpText>When marking call as responded add a disposition for the call or email.</inlineHelpText>
        <label>Response Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call or Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Follow-up on Specific Project</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Irrelevant to campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank/Lender</fullName>
                </value>
                <value>
                    <fullName>Community Bank</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>ESCO</fullName>
                </value>
                <value>
                    <fullName>Full Service CRE</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker</fullName>
                </value>
                <value>
                    <fullName>PACE Program</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Developer/Owner</fullName>
                </value>
                <value>
                    <fullName>Family Office/Wealth Mgmt</fullName>
                </value>
                <value>
                    <fullName>Investment Advisory</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Special Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
    <validationRules>
        <fullName>Response_Disposition</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  OR (
     ISPICKVAL( Status , &quot;Responded&quot;)),
    (ISPICKVAL( Response_Disposition__c , &quot;&quot;))
)</errorConditionFormula>
        <errorMessage>Please enter response disposition</errorMessage>
    </validationRules>
</CustomObject>